Spacing Bug Fixed

--- a/frontend/src/styles/VisitProfile.css
+++ b/frontend/src/styles/VisitProfile.css
@@ -50,6 +50,8 @@
     flex: 0 0 60%;
     /* Adjust width as needed */
     margin-right: 20px;
+    margin-top: -30vh;
+    margin-bottom: -20vh;
 }
 
 .right-column {
@@ -58,6 +60,8 @@
     justify-content: center;
     align-items: center;
     flex: 0 0 30%;
+    margin-top: -30vh;
+    margin-bottom: -20vh;
     /* Adjust width as needed */
 }
 
